--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,6 +174,7 @@
         android:layout_marginRight="15dp"
         android:background="@color/colorPrimaryDark"
         android:onClick="onConnect"
+
         android:text="Connect "
         android:textColor="#ECF0F1" />
 
@@ -184,9 +185,13 @@
         android:layout_below="@+id/Alarm"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="-188dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="99dp"
+        android:layout_marginLeft="99dp"
+        android:layout_marginTop="-195dp"
+        android:layout_marginEnd="99dp"
+        android:layout_marginRight="99dp"
         android:ems="10"
         android:hint="SSID"
         android:inputType="textPersonName"
@@ -199,9 +204,13 @@
         android:layout_below="@+id/ssid"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="-6dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="-5dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginRight="98dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
